# zerosh

./: Cargo.toml  LICENCE  README.md
src/: helper.rs  main.rs  shell.rs
src/shell/: message.rs  spawn_sig_handler.rs  worker.rs
src/shell/worker/: built_in_cmd.rs  command.rs  job.rs  process.rs  spawn_child.rs  syscall.rs  wait_child.rs
src/shell/worker/spawn_child/: helper.rs
